fixed json package, add engine version

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./src/server/server",
     "test": "./node_modules/mocha/bin/_mocha"
   },
+  "engines": {
+   "node": "6.3.0"
+ },
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
