changes to engine in package.json

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": "6.6.0"
+  }
 }
